--- a/Modules/Editor/View/Editor/Templates/Index.html
+++ b/Modules/Editor/View/Editor/Templates/Index.html
@@ -41,6 +41,7 @@ foreach ($groups as $groupName) {
 	.wcfe-vars-group {margin-left: 5px;}
 	.field-tip {margin:0 0 0 202px; color: #aaa;}
 	div#help-box {margin: 8px;background-color: wheat;padding: 5px 22px;max-width: 410px;position: absolute;right: 0;}
+	.field-error {margin-left: 35px; color: red;}
 	input[type="text"] {width: 350px;}
 	fieldset strong {background-color: white; font-weight: bold; padding: 0 5px;}
 	.checkbox-row p.field-tip {display: inline;margin-left: 0;}
@@ -70,10 +71,16 @@ foreach ($groups as $groupName) {
 <script type="text/javascript"><?php echo $scripts; ?></script>
 <div id="help-box">
 	<p style="float: right;">Have a problem? Submit a support question on <a target="_blank" href="https://wordpress.org/plugins/wp-config-file-editor/">WCFE Plugin Support page</a></p>
-	<p style="font-style: italic;font-size: 15px;">
-		Please note that config fields form is not yet being validated! Any value might be submitted to the server. Invalid values might cause your Wordpress site to get down. If this Plugin is being liked by Wordpress community I will then add many new features. Please let me know if you like this Plugin by submitting a review
-		on <a target="_blank" href="https://wordpress.org/support/view/plugin-reviews/wp-config-file-editor">WCFE Plugin Reviews page</a>
-	</p>
+	<ul style="font-style: italic;font-size: 15px;list-style-type: circle;padding-left: 28px;">
+		<li>This form is validated by WCFE.</li>
+		<li>Using this form is safe than Going to Preview and then 'Save' the config file directly.</li>
+		<li style="font-weight: bold;font-size: 14px;">The most risky field is the Table Prefix field as this field is not currently being validated. So please make sure you change it right.</li>
+		<li>Database parameters will be tested by making a connection to the database server, so its safe to write them and save to check the result.</li>
+		<li style="font-weight: bold;font-size: 14px">this Plugin is not to work with any Wordpress version as it bunldes wp-config.php file that comes with Wordpress 4.1</li>
+		<li style="font-weight: bold;font-size: 14px">You will lose any custom (Writen from FTP, etc...) code in the wp-config.php file after saving the form</li>
+		<li>Please appreciate the Plugin by submitting a reviews on <a target="_blank" href="https://wordpress.org/support/view/plugin-reviews/wp-config-file-editor">WCFE Plugin Reviews page</a></li>
+	</ul>
+	<br>
 	<p>
 		Checkout other Plugins created by the same Author
 		<ul>
