Missing file from previous ocmmits
Add notes to helpbox + Adding missing file from previous commits!

--- a/Modules/Editor/View/Editor/Templates/Index.html
+++ b/Modules/Editor/View/Editor/Templates/Index.html
@@ -78,6 +78,7 @@ foreach ($groups as $groupName) {
 		<li>Database parameters will be tested by making a connection to the database server, so its safe to write them and save to check the result.</li>
 		<li style="font-weight: bold;font-size: 14px">this Plugin is not to work with any Wordpress version as it bunldes wp-config.php file that comes with Wordpress 4.1</li>
 		<li style="font-weight: bold;font-size: 14px">You will lose any custom (Writen from FTP, etc...) code in the wp-config.php file after saving the form</li>
+		<li style="font-weight: bold;font-size: 14px">Changing Secure keys might cause force Log out, you will need to refresh the page and log in again</li>
 		<li>Please appreciate the Plugin by submitting a reviews on <a target="_blank" href="https://wordpress.org/support/view/plugin-reviews/wp-config-file-editor">WCFE Plugin Reviews page</a></li>
 	</ul>
 	<br>
