Updating help box text

--- a/Modules/Editor/View/Editor/Templates/Index.html
+++ b/Modules/Editor/View/Editor/Templates/Index.html
@@ -73,7 +73,7 @@ foreach ($groups as $groupName) {
 	<p style="float: right;">Have a problem? Submit a support question on <a target="_blank" href="https://wordpress.org/plugins/wp-config-file-editor/">WCFE Plugin Support page</a></p>
 	<ul style="font-style: italic;font-size: 15px;list-style-type: circle;padding-left: 28px;">
 		<li>Using this form is safe than Going to Preview and then 'Save' the config file directly.</li>
-		<li style="font-weight: bold;font-size: 14px;">The most risky field is the Table Prefix field as this field is not currently being validated. So please make sure you change it right.</li>
+		<li style="font-weight: bold;font-size: 14px;">The most risky field is the Table Prefix as this field is not currently being validated. However its alo a good way for switching between multiple Wordpress installations and also for forcing Wordpress to create new databse installation. So please make sure you change it right.</li>
 		<li>Database parameters will be tested by making a connection to the database server, so its safe to write them and save to check the result.</li>
 		<li style="font-weight: bold;font-size: 14px">this Plugin is not to work with any Wordpress version as it bunldes wp-config.php file that comes with Wordpress 4.1</li>
 		<li style="font-weight: bold;font-size: 14px">You will lose any custom (Writen from FTP, etc...) code in the wp-config.php file after saving the form</li>
