--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -7,15 +7,16 @@
 }
 
 ul#errors-bar {
-	color: red;
-	background-color: white;
-	height: 68px;
-	overflow: auto;
-	padding: 10px 0px 0 30px;
-	width: 96%;
+    color: yellow;
+    font-size: 17px;
+    padding: 18px 0px;
+    width: 96%;
+    border-left: 6px solid red;
 }
 ul#errors-bar li {
-	list-style-type: square;
+  margin-left: 15px;
+  background-color: #0E5B8E;
+  margin-bottom: 5px;
 }
 	
 div#wcfe-body {
@@ -57,7 +58,7 @@ fieldset strong {
 	margin-top: 40px;
 }
 
-.field-row label {
+.field-row label, .checkbox-row label {
 	width : 244px;
 	display: inline-block
 }
@@ -83,10 +84,6 @@ a.secure-key-generator-key {
 	width: 98%;
 }
 
-.field-row {
+.field-row, .checkbox-row {
 	margin-bottom: 15px;
-}
-
-.checkbox-row input[type="checkbox"] {
-	margin-left: 200px;
 }
