--- a/Modules/Editor/View/Editor/Templates/Index.html
+++ b/Modules/Editor/View/Editor/Templates/Index.html
@@ -24,17 +24,19 @@ $router =& $this->router();
 	</ul>
 <?php $model->writeState(); # Re-write state as this is running too late! ?>
 <?php endif; ?>
-	<form method="post" action="<?php echo $router->routeAction() ?>">
+	<form id="wcfe-config-editor-form" method="post" action="<?php echo $router->routeAction() ?>">
 <?php
 		# Output options tab
-		$optionsTab = new	Tabs\Tabs($form);
+		$optionsTab = new	Tabs\Tabs( $form );
 		echo $optionsTab;
 ?>
 		<div id="wcfe-toolbox">
-			<input type="submit" name="configFileFields[Task]" value="Save" />
-			<input type="submit" name="configFileFields[Task]" value="Preview" />
+			<input type="button" name="configFileFields[Task]" value="Save" id="wcfe-editor-form-save" />
+			<input type="submit" name="configFileFields[Task]" value="Preview" id="wcfe-editor-form-preview" />
 		</div>
 		<input type="hidden" name="configFileFields[<?php echo $form->getSecurityTokenName(); ?>]" value="<?php echo $form->getSecurityToken()->getValue(); ?>" />
 	</form>
 </div>
 <script type="text/javascript">var editorServiceKeyGenUrl = '<?php echo $this->router()->findRouter('Editor', 'editorService')->routeAction('createSecureKey'); ?>';</script>
+<?php // Confirm save message template to be used by thickbox as inline popup ?>
+<?php require 'ConfirmSave.html'; ?>
