--- a/Modules/Editor/View/Editor/Templates/Index.html
+++ b/Modules/Editor/View/Editor/Templates/Index.html
@@ -31,8 +31,9 @@ $router =& $this->router();
 		echo $optionsTab;
 ?>
 		<div id="wcfe-toolbox">
-			<input type="button" name="configFileFields[Task]" value="Save" id="wcfe-editor-form-save" />
-			<input type="submit" name="configFileFields[Task]" value="Preview" id="wcfe-editor-form-preview" />
+			<input type="button" value="Save" id="wcfe-editor-form-save" />
+			<input type="button" value="Preview" id="wcfe-editor-form-preview" />
+			<input type="hidden" name="configFileFields[Task]" value="" />
 		</div>
 		<input type="hidden" name="configFileFields[<?php echo $form->getSecurityTokenName(); ?>]" value="<?php echo $form->getSecurityToken()->getValue(); ?>" />
 	</form>
