PreUpdate and Update, PostUpdate is not yet, update success scenario is not ye t considered too

--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -167,3 +167,9 @@ p.wcfe-restore-parameters {
   color: red;
   font-size: 14px;
 }
+
+ul.wcfe-thickbox-errors-list {
+    color: red;
+    background-color: #131111;
+    display: none;
+}
