--- a/Modules/Editor/View/Editor/Templates/ConfirmSave.html
+++ b/Modules/Editor/View/Editor/Templates/ConfirmSave.html
@@ -12,6 +12,7 @@ defined('ABSPATH') or die(WCFE\NO_DIRECT_ACCESS_MESSAGE);
 ?>
 <div id="wcfe-confirm-save-message">
 	<div id="wcfe-confirm-save-message-dialog">
+		<ul class="wcfe-thickbox-errors-list"></ul>
 		<div id="wcfe-restore-note">
 		  <p>Config File Editor Plugin created config file back from current wp-config.php file</p>
 		  <p>Please copy and past the following link to safe place, use it if you having issues access Wordpress after updating Config File. The following link is only available if COnfig Editor Plugin detects Wordpress stopped and only available for one time use</p>
