Update is done so far but need more test. I also start to do the same for preview view/template, i start by applying ACE Editor and almost done!!

--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -1,9 +1,9 @@
 #wpwrap {
-	background-color: #0367A9;
+	background-color: #161616;
 }
 
 #adminmenuback, #adminmenuwrap, .wp-submenu, #adminmenu, #wpadminbar {
-	background-color: #0F466A !important;
+	background-color: #161616 !important;
 }
 
 ul#errors-bar {
