--- a/Modules/Editor/View/Editor/Templates/Index.html
+++ b/Modules/Editor/View/Editor/Templates/Index.html
@@ -25,6 +25,7 @@ $actionsToGetRoute = array
 	'validateForm',
 	'postUpdate',
 	'updateConfigFile',
+	'echo'
 );
 
 foreach ( $actionsToGetRoute as $actionName )
