--- a/Modules/Editor/View/Editor/Templates/Index.html
+++ b/Modules/Editor/View/Editor/Templates/Index.html
@@ -13,28 +13,10 @@ defined('ABSPATH') or die(WCFE\NO_DIRECT_ACCESS_MESSAGE);
 $model =& $this->result();
 $form =& $model->getForm();
 $router =& $this->router();
-$serviceRouter = $router->findRouter( 'Editor', 'editorService' );
-
-# Actions Routes used by variaous aajax requests
-$actionsRoutes = array();
-
-$actionsToGetRoute = array
-(
-	'createSecureKey',
-	'preUpdate',
-	'validateForm',
-	'postUpdate',
-	'updateConfigFile',
-	'echo'
-);
-
-foreach ( $actionsToGetRoute as $actionName )
-{
-	$actionsRoutes[ $actionName ] = (string) $serviceRouter->routeAction( $actionName );
-}
 
 ?>
 <div id="wcfe-body">
+
 <?php if ($model->hasErrors()) : ?>
 	<ul id="errors-bar">
 <?php foreach ($model->getCleanErrors() as $errorMessage) : ?>
@@ -43,6 +25,7 @@ foreach ( $actionsToGetRoute as $actionName )
 	</ul>
 <?php $model->writeState(); # Re-write state as this is running too late! ?>
 <?php endif; ?>
+
 	<form id="wcfe-config-editor-form" method="post" action="<?php echo $router->routeAction() ?>">
 <?php
 		# Output options tab
@@ -50,17 +33,13 @@ foreach ( $actionsToGetRoute as $actionName )
 		echo $optionsTab;
 ?>
 		<div id="wcfe-toolbox">
-			<input type="button" value="Save" id="wcfe-editor-form-save" />
-			<input type="button" value="Preview" id="wcfe-editor-form-preview" />
+			<input type="button" class="wcfe-task-button" value="Save" id="wcfe-editor-form-save" />
+			<input type="button" class="wcfe-task-button" value="Preview" id="wcfe-editor-form-preview" />
 			<input type="hidden" name="configFileFields[Task]" value="" />
 		</div>
 		<input type="hidden" name="configFileFields[<?php echo $form->getSecurityTokenName(); ?>]" value="<?php echo $form->getSecurityToken()->getValue(); ?>" />
 	</form>
 </div>
-<script type="text/javascript">var actionsRoute = <?php echo json_encode( $actionsRoutes ) ?>;</script>
 
-<?php // Errors list dialog to be used by various Ajax actions ?>
-<div id="wcfe-errors-dialog"><div><ul id="wcfe-errors-dialog-errors-list"></ul></div></div>
-
-<?php // Confirm save message template to be used by thickbox as inline popup ?>
-<?php require 'ConfirmSave.html'; ?>
+<?php // Editor Services Template ?>
+<?php require 'Templates' . DIRECTORY_SEPARATOR . 'EditorServices.html'; ?>
