--- a/Modules/Editor/View/Editor/Templates/Preview.html
+++ b/Modules/Editor/View/Editor/Templates/Preview.html
@@ -15,15 +15,9 @@ $router =& $this->router();
 $model =& $result['model'];
 $form =& $result['form'];
 ?>
-<style type="text/css">
-	ul#errors-bar {color: red;background-color: white;height: 68px;overflow: auto;padding: 10px 0px 0 30px;width: 96%;}
-	ul#errors-bar li {list-style-type: square;}
-</style>
-<style type="text/css">
-	#config-file-content {width: 99%; height:800px; margin-top: 10px; font-size: 18px;}
-	input[type="submit"] {float: left;}
-</style>
+
 <div id="wcfe-preview-screen">
+
 <?php if ($model->hasErrors()) : ?>
 	<ul id="errors-bar">
 <?php foreach ($model->getCleanErrors() as $errorMessage) : ?>
@@ -32,9 +26,10 @@ $form =& $result['form'];
 	</ul>
 <?php $model->writeState(); # Re-write state as this is running too late! ?>
 <?php endif; ?>
+
 	<form method="post" action="<?php echo $router->routeAction() ?>">
 		<div id="config-file-content"><?php echo htmlentities( $model->getConfigFileContent() ) ?></div>
-		<input type="submit" value="Update" />
+		<input type="button" class="wcfe-task-button" value="Save" id="wcfe-raw-editor-save" />
 		<input type="hidden" name="wcfeaction" value="Preview" />
 		<input type="hidden" name="rawConfigFile[<?php echo $form->getSecurityTokenName(); ?>]" value="<?php echo $form->getSecurityToken()->getValue(); ?>" />
 	</form>
@@ -42,6 +37,9 @@ $form =& $result['form'];
 <?php foreach ($router->getRouteParams() as $name => $value) : ?>
 		<input type="hidden" name="<?php echo $name; ?>" value="<?php echo $value; ?>" />
 <?php endforeach; ?>
-		<input type="submit" value="Back" />
+		<input type="submit" class="wcfe-task-button" value="Back" />
 	</form>
 </div>
+
+<?php // Editor Services Template ?>
+<?php require 'Templates' . DIRECTORY_SEPARATOR . 'EditorServices.html'; ?>
