--- a/Modules/Editor/View/Editor/Templates/Templates/ConfirmSave.html
+++ b/Modules/Editor/View/Editor/Templates/Templates/ConfirmSave.html
@@ -14,6 +14,9 @@ defined('ABSPATH') or die(WCFE\NO_DIRECT_ACCESS_MESSAGE);
 	<div id="wcfe-confirm-save-message-dialog">
 		<ul class="wcfe-thickbox-errors-list"></ul>
 		<div id="wcfe-restore-note">
+			<div class="warning-image">
+				<img src="<?php echo WP_PLUGIN_URL . '/wp-config-file-editor/Modules/Editor/View/Editor/Media/Images/dialog-warning.png' ?>" alt="Warning" />
+			</div>
 		  <p>Config File Editor Plugin created config file back from current wp-config.php file</p>
 		  <p>Please copy and past the following link to safe place, use it if you having issues access Wordpress after updating Config File. The following link is only available if COnfig Editor Plugin detects Wordpress stopped and only available for one time use</p>
 		  <p>The link below will immediately restore back previous wp-config.php file.</p>
