--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -31,6 +31,12 @@ div#wcfe-body {
 .wcfe-vars-group {
 	margin-left: 5px;
 }
+.checkbox-row p.field-tip
+{
+	display: inline;
+	margin-left: 0;
+}
+
 .field-tip, .checkbox-row p.field-tip
 {
 	color: #FFE308;
@@ -98,13 +104,13 @@ div#wcfe-confirm-save-message-dialog {
 }
 
 #TB_window {
-	background-color: transparent;
-  -webkit-box-shadow: 0 3px 6px rgba(255, 224, 0, 0.3);
-  box-shadow: 0 3px 6px rgba(255, 224, 0, 0.3);	
+background-color: #000000;
+    -webkit-box-shadow: 0 3px 6px rgba(253, 254, 255, 0.3);
+    box-shadow: 0 3px 6px rgba(253, 254, 255, 0.3);
 }
 
 #TB_ajaxWindowTitle {
-    background-color: yellow;
+    background-color: #FFFFFF;
     color: red;
     font-size: 26px;
 }
@@ -117,11 +123,33 @@ div#wcfe-confirm-save-message-dialog p {
   margin: 0 0 14px 0;
 }
 
+#wcfe-update-config-file-warning-notes
+{
+	height: 194px;
+  overflow: auto;
+  margin: 0;
+  padding: 0px 0 0 26px !important;
+  width: 422px;
+}
 div#wcfe-confirm-save-message-dialog ul {
     list-style-type: disc;
     padding: 11px 49px;
 }
 
+#wcfe-restore-section {
+    margin-bottom: 28px;
+    color: red;
+}
+#wcfe-restore-section p {
+    font-size: 17px !important;
+    line-height: 19px !important;
+}
+#wcfe-restore-section a, #wcfe-restore-section a:visited {
+	color: #00ABFF;
+}
+#wcfe-restore-section a:hover {
+	color: #75CDF8;
+}
 #TB_overlay {
 	background-color: black !important;
   opacity: 1 !important;
@@ -184,10 +212,10 @@ ul.wcfe-thickbox-errors-list {
 
 .warning-image
 {
-	float: right;
-  width: 128px;
-  height: 123px;
-  margin-top: 12px;
+float: right;
+    width: 128px;
+    height: 123px;
+    margin-top: 112px;
 }
 
 .help-box
