Reflect successed update by displaying success image in place of Warning image

--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -267,6 +267,12 @@ td.help-label-text {
 {
 	display: none;
 }
+
+.success-status-image
+{
+	display: none;
+}
+
 /* PREVIEW */
 #config-file-content 
 {
