Add Simple Sub Container Tab and use it for Upgrade and Post Tabs

--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -257,6 +257,8 @@ color: #FFB300;
 {
     float: right;
     text-decoration: none;
+    margin: 10px;
+
 }
 
 .help-list 
@@ -319,6 +321,12 @@ input.checkbox-list-input {
         left: -5px;
     top: 11px;
 }
+.simple-sub-container {
+    background-color: #212324;
+    padding: 10px 10px;
+    margin-bottom: 10px;
+}
+
 /* PREVIEW */
 #config-file-content 
 {
