--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -321,6 +321,7 @@ input.checkbox-list-input {
 {
 	width: 324px;
 	font-size: 1.1em;
+	display: none;
 }
 #wcfe-config-form-main-menu ul
 {
@@ -402,7 +403,7 @@ display: none;
     background-color: transparent;
     color: white;
     width: 311px;
-    height: 115px;
+    height: 170px;
     padding: 10px 8px;
     border-radius: 12px;
     box-shadow: #0B3E6F -1px 1px 12px 0px;
