Use specific classes for path fields to be longer and to get a start for developing auto path typing feature

--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -441,6 +441,11 @@ input[type="text"].typeinteger, #MaintenanceOptionsTab input[type="text"]
 {
 	width: 536px;
 }
+
+.long-input
+{
+	width: 400px !important;
+}
 /* PREVIEW */
 #config-file-content 
 {
