--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -332,7 +332,7 @@ width: 213px;
 
 #wcfe-config-form-main-menu
 {
-	width: 324px;
+	width: 432px;
 	font-size: 1.0em;
 	display: none;
 }
@@ -445,6 +445,31 @@ input[type="text"].typeinteger, #MaintenanceOptionsTab input[type="text"]
 .long-input
 {
 	width: 400px !important;
+}
+
+#wcfe-info-templates > *
+{
+	display: none;
+}
+
+table#wcfe-info-paths-table {
+    /* background-color: navy; */
+    color: white;
+    width: 100%;
+    margin: 26px 0 0 0;
+}
+table#wcfe-info-paths-table th {
+    background-color: #B23232;
+}
+table#wcfe-info-paths-table td {
+    background-color: #000;
+}
+table#wcfe-info-paths-table input {
+    width: 99%;
+    height: 19px;
+    background-color: transparent;
+    color: white;
+    border-color: #173747
 }
 /* PREVIEW */
 #config-file-content 
