Make Cookies fields a little longer

--- a/Modules/Editor/View/Editor/Media/Style.css
+++ b/Modules/Editor/View/Editor/Media/Style.css
@@ -442,6 +442,11 @@ input[type="text"].typeinteger, #MaintenanceOptionsTab input[type="text"]
 	width: 536px;
 }
 
+.medium-input
+{
+	width: 250px !important;
+}
+
 .long-input
 {
 	width: 400px !important;
